bug: none - dont allow words in listview's column headers to wrap
Copied from Perforce
 Change: 75228

--- a/WebRoot/css/dwt.css
+++ b/WebRoot/css/dwt.css
@@ -495,6 +495,13 @@
 
 }
 
+.DwtListHeaderItem-label {
+	padding-left: 3px;
+	white-space: nowrap;
+	overflow: hidden;
+	@OverflowEllipsis@
+}
+
 
 
 /*
